welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:3: error: type mismatch;
 found   : Double
 required: Int
  for ( i<- 1 to nbPas){
                 ^